Add initial project structure with React, TypeScript, and Spring Boot backend
- Created a new React client with TypeScript and Vite, including essential files like .gitignore, README, and ESLint configuration.
- Implemented a Spring Boot server with exception handling for resource management (ResourceNotFoundException, ResourceAlreadyExistsException, ValidationException).
- Added mappers for converting entities to DTOs for categories and sizes.
- Established repositories for categories, colors, and sizes with JPA specifications.
- Developed services for managing categories, colors, and sizes, including CRUD operations and validation.
- Included pagination and search functionality in service methods.
- Ensured proper error handling and normalization of input data across services.